<resources>
    <string name="app_name">Monument Viewer</string>
    <string name="user_text">User</string>
    <string name="pass_text">Password</string>
    <string name="button_log">Log In</string>

    <string name="tv_monument">Monument</string>
    <string name="monument_name"> Name </string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="coordinates">Coordinates</string>
    <string name="tv_Address">Address: </string>
    <string name="Email">Email: </string>
    <string name="tv_contact">"Contact: "</string>
    <string name="tv_description">Description</string>
    <string name="id_name_composition">%1$s - %2$s</string>
</resources>