<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"

    >
    <ImageView
        android:id="@+id/iv_monument"
        android:layout_width="150dp"
        android:layout_height="150dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
>

        <TextView
            android:id="@+id/MonumentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_monument"
            android:textStyle="bold"
            tools:text="Monument" />

        <TextView
            android:id="@+id/Monument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/LatitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/LongitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/Longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>







</LinearLayout>